--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 </head>
 
 <body>
+  <img src="images/bg-pattern-top-desktop.svg" class="bg_top">
+  <img src="images/bg-pattern-bottom-desktop.svg" class="bg_bottom">
+
   <div class="wrapper">
 
     <div class="header_area">
